# igi.dgas

./: .cproject  ChangeLog  Makefile.am  README  build.xml  changeLog  configure.ac
config-consumers/: Makefile.am  (+19 more)
interface-common/: Makefile.am  Makefile.in
interface-common/glite/dgas/common/base/: comm_struct.h  db.h  dbResult.h  dgas_config.h  dgas_lock.h  digests.h  glite_dgas_regexp.h  int2string.h  libdgas_log.h  localSecurity.h  stringSplit.h  xmlUtil.h
interface-common/glite/dgas/common/hlr/: hlr_prot_errcode.h
interface-common/glite/dgas/common/pa/: libPA_comm.h
interface-common/glite/dgas/common/tls/: GSISocketAgent.h  GSISocketClient.h  GSISocketServer.h  SocketAgent.h  SocketClient.h  SocketServer.h
interface-hlr-service/: Makefile.am  Makefile.in
interface-hlr-service/glite/dgas/hlr-service/base/: db.h  dbResult.h  hlrAcctdesc.h  hlrAdmin.h  hlrGenericQuery.h  hlrResource.h  hlrResourceGroupVO.h  hlrTransIn.h  hlrTransaction.h  notFor2LHLR.h  qTransaction.h  transInLog.h
interface-hlr-service/glite/dgas/hlr-service/engines/: atmResourceEngine.h  atmResourceEngine2.h  engineCmnUtl.h
interface-producers/: Makefile.am
interface-producers/glite/dgas/dgas-producers/producers/: amqProducer.h  hlrProducer.h  legacyComposer.h  legacyProducer.h  recordComposer.h
interface-sensors/: Makefile.am
src-common/base/: .libdgas_log.cpp.swp  Makefile.am  Makefile.in  db.cpp  dbResult.cpp  dgas_config.cpp  dgas_lock.cpp  digests.cpp  glite_dgas_regexp.cpp  libdgas_log.cpp  localSecurity.cpp  xmlUtil.cpp
src-consumers/consumers/: AMQConsumer.cpp  AMQConsumerExe.cpp  Makefile.am  asyncConsumer.cpp  dgas-emicarParser  glite-dgas-ogfurParser  legacyRecordManager.cpp  legacyRecordManagerExe.cpp
src-hlr-clients/atm/: Makefile.am  Makefile.in  atmClient.cpp  atmClientExe.cpp  sendRecordExe.cpp
src-hlr-clients/base/: Makefile.am  Makefile.in  dgasClientBase.cpp
src-hlr-clients/ping/: Makefile.am  Makefile.in  dgas-ping.man  pingClient.cpp  pingClientExe.cpp
src-hlr-clients/ui/: Makefile.am  Makefile.in  dgas-hlr-query.man  hlrAdvancedQueryClient.cpp
src-hlr-service/: Makefile.am  Makefile.in
src-hlr-service/admin/: .#hlrArchiveOldRecords.cpp.1.1.2.6  .hlrTranslateDb.cpp.swo  .hlrTranslateDb.cpp.swp  Makefile.am  Makefile.in  dgas-hlr-bdiiresimport.pl  dgas-hlr-checkHostCertProxy.sh  dgas-hlr-dbcreate  dgas-hlrd-dbcreate  dgas-sumrecords2goc.pl  dgas-sumrecords2gocSSMAggregate.pl  glite-dgas-clean-wJobs  glite-dgas-hlr-bdiiresimport.pl  glite-dgas-hlr-checkHostCertProxy.sh  glite-dgas-hlrd-dbcreate  glite-dgas-sumrecords2goc.pl  glite-dgas-sumrecords2gocSSM.pl  hlrAddHlrAdmin.cpp  hlrAddResource.cpp  hlrArchiveOldRecords.cpp  hlrCheckQueue.cpp  hlrDelHlrAdmin.cpp  hlrDelResource.cpp  hlrHlrAdminGetInfo.cpp  hlrJTS2CSV.cpp  hlrJTSFeeder.cpp  hlrRGetInfo.cpp  hlrSqlExec.cpp  hlrTranslateDb.cpp
src-hlr-service/base/: Makefile.am  Makefile.in  db.cpp  dbResult.cpp  dbWaitress.cpp  dbWaitress.h  digests.cpp  hlrAdmin.cpp  hlrGenericQuery.cpp  hlrResource.cpp  hlrTransIn.cpp  hlrTransaction.cpp  qTransaction.cpp  serviceCommonUtl.cpp  serviceCommonUtl.h  serviceVersion.cpp  serviceVersion.h  transInLog.cpp
src-hlr-service/engines/: .atmResBankClient.cpp.swp  Makefile.am  Makefile.in  advancedQueryEngine2.cpp  advancedQueryEngine2.h  atmResBankClient.cpp  atmResBankClient.h  atmResBankClient2.cpp  atmResBankClient2.h  atmResBankClient2.loT  atmResourceEngine.cpp  atmResourceEngine.h  atmResourceEngine2.cpp  atmResourceEngine2.h  engineCmnUtl.cpp  engineCmnUtl.h  getRecordEngine.cpp  getRecordEngine.h  libdgasAtmResourceEngine2.la  libglite_dgas_atmResBankClient2.la  pingEngine.cpp  pingEngine.hpp  urConcentratorEngine.cpp  urConcentratorEngine.h
src-hlr-service/monitor/: Makefile.am  Makefile.in  glite-dgas-monitor-run.sh
src-hlr-service/monitor/plugins/: Makefile.am  Makefile.in  ping_2  ping_3  ping_4  ping_9
src-hlr-service/regression/: Makefile.am  Makefile.in  full.test  glite-dgas-testrun.pl  joinCover.pl  level1.test  level2.test  sensors_4_full.test  sensors_full.test  sensors_full_codecoverage.test  storage.test  test.conf
src-hlr-service/regression/tests/: Makefile.am  Makefile.in  UR_LRMS_lsf.records  UR_LRMS_pbs.records  addResourceAuth.sh  atmClient.sh  benchmarksTest.sh  checkTable.sh  cleanResubJob.sh  cleanUpJob.sh  createLSFRecords.sh  delResourceAuth.sh  dgas_sensors_test.conf  dgas_sensors_test.conf.lsf.ldif.sed  dgas_sensors_test.conf.lsf.sed  dgas_sensors_test.conf.template  dgas_sensors_test_poolPatterns.conf  generateJobId.sh  glideInTest.sh  glite-info-dynamic-ce.ldif.4482  grid-jobmap.template  grid-jobmap.template.lsf  gridJobFQAN.lsf.sed  gridJobFQAN.sed  gridJobGlideIn.sed  gridJobpool.sed  hlrDBExists.sh  hlrHADIsAlive.sh  hlrQmgrIsAlive.sh  hlrServerdIsAlive.sh  hlr_tmpDBExists.sh  localJobmap.sed  missingStartQtimeJob.sh  multiplePing.sh  multipleRecords.sh  mysqldPing.sh  negativeWCTJob.sh  poolAccountPattern.conf.template  putLSFURindgasURBox.sh  putURindgasURBox.SQL.sh  (+13 more)
src-hlr-service/server/: Makefile.am  Makefile.in  daemonFactory.cpp  daemonFactory.h  dgas-hlr-had.pl  hlrQtransMgrd.cpp  hlrServerd.cpp  mlClient.cpp  urForward.cpp  urForwardFactory.cpp  urForwardFactory.h  xmlHlrHelper.cpp  xmlHlrHelper.h
src-msg-common/: AMQConsumer.cpp  Makefile.am  amqConsumer.cpp  amqProducer.cpp  asyncConsumer.cpp
src-pa-clients/pa-query/: Makefile.am  Makefile.in  paClient.cpp  paInfoClient.cpp
src-producers/producers/: Copy of amqProducer.cpp  Makefile.am  amqProducer.cpp  amqProducerExe.cpp  dgas-discard-record-filter.pl  dgas-emicarComposer  dgas-emicarComposer.pl  dgas-record-filter.pl  dgas-sqlInsertComposer.pl  dgas-stompProducer.pl  glite_dgas_ogfurComposer  legacyComposer.cpp  legacyComposerExe.cpp  legacyProducer.cpp  legacyProducerExe.cpp  legacyStorageComposerExe.cpp
src-sensors/atm/: Makefile.am  atmClient.cpp  atmClientExe.cpp
src-sensors/ce_daemons/: Makefile.am  dgas-pushd-SQLite.pl  dgas-pushd-fileInput.pl  dgas-urcollector-SQLite.pl  glite-dgas-ceServerd-had.pl  glite-dgas-pushd.pl  glite-urcollector.pl
(+107 files in other folders)
