## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

commondir = $(includedir)
nobase_common_HEADERS = \
	glite/dgas/common/base/comm_struct.h \
	glite/dgas/common/base/dgas_config.h \
	glite/dgas/common/base/dgas_lock.h \
	glite/dgas/common/base/dgasVersion.h \
	glite/dgas/common/base/int2string.h \
	glite/dgas/common/base/libdgas_log.h \
	glite/dgas/common/base/stringSplit.h \
	glite/dgas/common/base/xmlUtil.h \
	glite/dgas/common/base/digests.h \
	glite/dgas/common/base/localSecurity.h \
	glite/dgas/common/hlr/hlr_prot_errcode.h \
	glite/dgas/common/tls/GSISocketAgent.h \
	glite/dgas/common/tls/GSISocketClient.h \
	glite/dgas/common/tls/GSISocketServer.h \
	glite/dgas/common/tls/SocketAgent.h \
	glite/dgas/common/tls/SocketClient.h \
	glite/dgas/common/tls/SocketServer.h \
	glite/dgas/common/pa/libPA_comm.h

MAINTAINERCLEANFILES = Makefile.in
