## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

hlrcldir = $(includedir)

nobase_hlrcl_HEADERS = \
	glite/dgas/hlr-service/engines/atmResourceEngine2.h \
	glite/dgas/hlr-service/engines/atmResourceEngine.h \
	glite/dgas/hlr-service/engines/engineCmnUtl.h \
	glite/dgas/hlr-service/base/hlrAdmin.h \
	glite/dgas/hlr-service/base/hlrGenericQuery.h \
	glite/dgas/hlr-service/base/hlrResource.h \
	glite/dgas/hlr-service/base/hlrTransaction.h \
	glite/dgas/hlr-service/base/hlrTransIn.h \
	glite/dgas/hlr-service/base/qTransaction.h \
	glite/dgas/hlr-service/base/transInLog.h \
	glite/dgas/hlr-service/base/db.h \
	glite/dgas/hlr-service/base/dbResult.h \
	glite/dgas/hlr-service/base/notFor2LHLR.h


MAINTAINERCLEANFILES = Makefile.in
