## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

hlrcldir = $(includedir)
nobase_hlrcl_HEADERS = \
	glite/dgas/hlr-activemq-producer/hlr-producer/hlrProducer.h\
	glite/dgas/hlr-activemq-producer/hlr-producer/legacyProducer.h\
	glite/dgas/hlr-activemq-producer/hlr-producer/recordComposer.h

MAINTAINERCLEANFILES = Makefile.in
