## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

hlrcldir = $(includedir)
nobase_hlrcl_HEADERS = \
	glite/dgas/dgas-producers/producers/legacyProducer.h\
	glite/dgas/dgas-producers/producers/legacyComposer.h

MAINTAINERCLEANFILES = Makefile.in
