## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

hlrcldir = $(includedir)
nobase_hlrcl_HEADERS = \
	glite/dgas/hlr-sensors/atm/atmClient.h \
	glite/dgas/hlr-sensors/base/dgasClientBase.h \
        glite/dgas/hlr-sensors/base/dgasClientInterface.h

MAINTAINERCLEANFILES = Makefile.in
