## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

## Subdirectories list

SUBDIRS = base  engines admin  server regression monitor

MAINTAINERCLEANFILES = Makefile.in 
